--- a/diploma1/WebContent/css/style.css
+++ b/diploma1/WebContent/css/style.css
@@ -244,4 +244,10 @@ p.sp {
  .btn-success{
  	font-size: 17px;
  }
+ .disabled {
+    z-index: 1000;
+    background-color: lightgrey;
+    opacity: 0.6;
+    pointer-events: none;
+}
 /*# sourceMappingURL=style.css.map */
