added img of audio next to the kazakh words

--- a/diploma1/WebContent/css/style.css
+++ b/diploma1/WebContent/css/style.css
@@ -254,4 +254,12 @@ div .container {
     opacity: 0.6;
     pointer-events: none;
 }
+.zvuk {
+	width: 40px;
+	margin-top: 32px;
+}
+.zvuk-text {
+	width: 40px;
+	
+}
 /*# sourceMappingURL=style.css.map */
