changed class on registration and everything related to it

--- a/diploma1/WebContent/css/style.css
+++ b/diploma1/WebContent/css/style.css
@@ -130,7 +130,7 @@ div .container {
       .classes li a.active, .classes li a:hover, .classes li a:focus {
         color: #8e44ad;
         text-decoration: none;
-        border-bottom: 2px dashed #8e44ad; }
+        border-bottom: 2px dashed #8e44ad; } 
 
 .question {
   width: 90%;
@@ -228,6 +228,8 @@ div .container {
   background: linear-gradient(to bottom, #5cb85c 0%, #4cae4c 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5cb85c', endColorstr='#4cae4c', GradientType=0 );
   border: 5px solid #bec3c7; }
+  .btn-correct:hover, .btn-correct:focus {
+    color: white;}
   .btn-incorrect {
   width: 100%;
   padding: 15px;
@@ -245,6 +247,8 @@ div .container {
   background: linear-gradient(to bottom, #d9534f 0%, #d43f3a 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9534f', endColorstr='#d43f3a', GradientType=0 );
   border: 5px solid #bec3c7; }
+    .btn-incorrect:hover, .btn-incorrect:focus {
+    color: white;}
  .btn-success{
  	font-size: 17px;
  }
