--- a/diploma1/WebContent/css/style.css
+++ b/diploma1/WebContent/css/style.css
@@ -15,7 +15,25 @@ body {
   background-color: #bec3c7;
   height: 100%;
   font-family: 'Helvetica'; }
+body.login {
+	background-image: url(../img/login-bg2.jpg);
+	
+  background-size: 100% auto ;
+  padding-top: 100px;
+}
+body.login .modal-content {
+	background-color: rgba(255,255,255,0.5);
+}
+body.login  #content {
+	background-color: transparent;
+}
 
+body.login .modal-dialog {
+	width: 600px;
+}
+body.login #nav {
+	display: none;
+}
 h1, h2, h3, h4, h5, h6, .sp {
   font-family: 'SignPainter'; }
 
@@ -307,5 +325,18 @@ div .container {
 }
 .letters {
 	margin-top: 40px;
+}
+.reg {
+	width: 800px;
+	margin: 0px auto;
+}
+.btn-yellow {
+	background-color: #f1c40f;
+}
+.reg-title {
+	font-size: 23px;
+    margin-bottom: -5px !important;
+    word-spacing: 2px;
+    text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
