--- a/diploma1/WebContent/css/style.css
+++ b/diploma1/WebContent/css/style.css
@@ -15,7 +15,25 @@ body {
   background-color: #bec3c7;
   height: 100%;
   font-family: 'Helvetica'; }
+body.login {
+	background-image: url(../img/login-bg2.jpg);
+	
+  background-size: 100% auto ;
+  padding-top: 100px;
+}
+body.login .modal-content {
+	background-color: rgba(255,255,255,0.5);
+}
+body.login  #content {
+	background-color: transparent;
+}
 
+body.login .modal-dialog {
+	width: 600px;
+}
+body.login #nav {
+	display: none;
+}
 h1, h2, h3, h4, h5, h6, .sp {
   font-family: 'SignPainter'; }
 
@@ -69,7 +87,7 @@ div .container {
       float: right; }
 
 #main {
-  margin: 30px 0px 0px; }
+  margin: 10px 0px 0px; }
   #main .question div div h3 {
 			font-size: 34px; }
 	.letter {
@@ -268,9 +286,8 @@ div .container {
   border: 5px solid #bec3c7; }
     .btn-incorrect:hover, .btn-incorrect:focus {
     color: white;}
- .btn-success{
- 	font-size: 17px;
- }
+ .btn-success {
+ 	font-size: 17px; }
  .disabled {
     z-index: 1000;
     background-color: lightgrey;
@@ -307,5 +324,22 @@ div .container {
 }
 .letters {
 	margin-top: 40px;
+}
+.wrong-word-rus {
+	font-size: 26px;
+	color: #808080;
+}
+.reg {
+	width: 800px;
+	margin: 0px auto;
+}
+.btn-yellow {
+	background-color: #f1c40f;
+}
+.reg-title {
+	font-size: 23px;
+    margin-bottom: -5px !important;
+    word-spacing: 2px;
+    text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
