edit and delete profile

--- a/diploma1/WebContent/css/style.css
+++ b/diploma1/WebContent/css/style.css
@@ -445,10 +445,14 @@ div .container {
 	margin-right: 5px;
 }
 .delete_area{
-	background: #ddd;
-	border: 1px solid #bec3c7;
-	border-radius: 10px;
-}
+	border: 2px solid #8e44ad;
+	border-radius: 10px; 
+	padding: 40px;
+	margin-top: 50px;}
+	.delete_area .btn {
+		width: 110px;
+		height: 40px;
+		margin-right: 20px;}
 
 
 /*# sourceMappingURL=style.css.map */
