fixed the list of learned topics on profile page "hello, username" on home page changed extensions of some imgs imgs' border rounded in training 1 and 2 changed font-family of letters inside boxes in training 3

--- a/diploma1/WebContent/css/style.css
+++ b/diploma1/WebContent/css/style.css
@@ -117,8 +117,8 @@ div .container {
 		border-radius: 5px;
 		padding: 2px; 
 		color: #8e44ad;
-		font-family: 'SignPainter';
-		font-size: 30px;
+		font-family: 'Helvetica';
+		font-size: 20px;
 		margin-top: 0px;
 		float: left;}
 	.letter .btn-success{
